infra/kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://auth.n8r.ch/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.n8r.ch/oauth2/start
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: k8s-dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-dashboard.n8r.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 8443
  tls:
  - hosts:
    - k8s-dashboard.n8r.ch
